--- a/.github/workflows/update-frontend.yml
+++ b/.github/workflows/update-frontend.yml
@@ -1,35 +1,29 @@
-name: Update Frontend from External Repo
+name: Daily Frontend Sync
 
 on:
-  workflow_dispatch:  # allow manual trigger anytime
   schedule:
-    - cron: '0 0 * * *' # Every day at 00:00 UTC (midnight)
+    - cron: "0 0 * * *"  # Runs daily at 00:00 UTC
+  workflow_dispatch:      # Allows manual trigger
 
 jobs:
-  update-frontend:
+  sync-frontend:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout your repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
+        uses: actions/checkout@v3
 
-      - name: Clone the external frontend repo
-        run: |
-          git clone https://github.com/manpreetkhandwal/prep_frontend temp_frontend
+      - name: Remove existing frontend folder
+        run: rm -rf frontend
 
-      - name: Copy files into frontend/frontend folder
-        run: |
-          rm -rf frontend/frontend/*
-          cp -r temp_frontend/* frontend/frontend/
-          rm -rf temp_frontend
+      - name: Clone Manpreet's frontend repo
+        run: git clone https://github.com/manpreetkhandwal/prep_frontend.git frontend
 
-      - name: Commit and Push changes
+      - name: Commit and push changes
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "Auto-update frontend from prep_frontend repo" || echo "No changes to commit"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add frontend
+          git commit -m "🔄 Auto-sync frontend from Manpreet"
           git push origin main
+        continue-on-error: true  # Avoid failure if no changes
