--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "framework": "nextjs",
   "functions": {
     "pages/api/**/*.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "@vercel/node"
     }
   }
 }
