--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-world-flags": "^1.6.0"
   },
   "devDependencies": {
+    "@types/node": "25.0.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.21",
